--- a/assets/styles/index.sass
+++ b/assets/styles/index.sass
@@ -1,9 +1,6 @@
-@tailwind base
-
-@layer base
-  html
-    font-family: "Roboto", sans-serif
-
+html
+  background-color: #f2f2f2
+  
 .icon
   width: 24px
   height: 24px
