feat/crud post flow

--- a/assets/styles/index.sass
+++ b/assets/styles/index.sass
@@ -5,7 +5,7 @@ body
   @apply h-dvh
 
 #__nuxt
-  @apply w-full h-full grid grid-rows-[1fr,auto] sm:grid-rows-[auto,1fr] grid-cols-[100%]
+  @apply w-full h-full grid grid-rows-[1fr] sm:grid-rows-[auto,1fr] grid-cols-[100%]
 
 #teleports
   @apply fixed z-[999]
