--- a/assets/styles/index.sass
+++ b/assets/styles/index.sass
@@ -2,7 +2,7 @@ html
   @apply bg-[#f6f6f6] break-words
 
 body
-  @apply h-dvh
+  @apply h-full
 
 #__nuxt
   @apply w-full h-full grid grid-rows-[1fr] sm:grid-rows-[auto,1fr] grid-cols-[100%]
