--- a/assets/styles/index.sass
+++ b/assets/styles/index.sass
@@ -1,11 +1,11 @@
 html
-  @apply bg-[#f6f6f6] break-words
+  @apply h-full bg-[#f6f6f6] break-words
 
 body
   @apply h-full
 
 #__nuxt
-  @apply w-full h-full grid grid-rows-[1fr] sm:grid-rows-[auto,1fr] grid-cols-[100%]
+  @apply w-full h-full grid grid-rows-[1fr] grid-cols-[100%]
 
 #teleports
   @apply fixed z-[999]
